# ccdev-portfolio

./: .buyild.sh.swp  .env  Dockerfile  README.md  build.bat  build.sh  ccdev_db  pyproject.toml  requirements.txt  schema.sql  start.sh
blog/: views.py
blog/static/: index.css
blog/templates/blog/: index.html
home/: admin.py  collectfiles.py  creds.json  mailer.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_message.py  0003_rename_files_project_github_link.py
home/static/: home.css
home/static/projects/BankApp/: Log.py  bank.db  oop.py  sql.sql
home/static/projects/InstaScrape/: main_gui.py  main_gui.ui  scraper.py
home/static/projects/IntrStats/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
home/static/projects/IntrStats/src/: index.html
home/static/projects/MatOpps/: Events.py  e  e.py  e.rs  graphwidget.py  layout.py  main_gui.py  main_gui.ui
home/static/projects/MatOpps/Terminal/: terminal.ui
home/static/projects/MatOpps/events/: __init__.py  complex_events.py  g.py  mat_events.py  scatter_events.py  surface_events.py  vector_events.py
home/static/projects/MatOpps/temp_trash/: main.py  ops.py
home/static/projects/T - D.B.E/: auth.py  data_struct.py  dbe.py  muck.txt  plt.py
home/static/projects/T - D.B.E/mock/: mock.db  onecH.db
home/static/projects/T - D.B.E/users/: users.db
home/templates/home/: index.html
home/templatetags/: tem_tags.py
management/: views.py
management/static/: management.css
management/templates/management/: index.html
portfolio/: settings.py  urls.py
(+38 files in other folders)
